<resources>
    <string name="app_name">SmartStadium</string>
    <string name="loginMainTitle">Bienvenue sur SmartStadium</string>
    <string name="loginTextIntro"> Cette application est destinée à améliorer votre expérience dans ce stade. Vous êtes connecté en tant qu\'utilisateur anonyme pour l\'instant. </string>
    <string name="mainTextAction">Scanner un QRcode pour interagir avec le stade</string>
    <string name="publicTitle">Bienvenue</string>
    <string name="publicName">Name</string>
    <string name="publicLocalisationTitle">Localisation:</string>
    <string name="publicLocalistionInfo">Erreur lors du chargement du lieu</string>
    <string name="publicTmp">Je sais   \npas quoi écrire  ici \nmais je voulais pas  \nque ca reste vide   \nFaudrait mettre des stats ou quoi</string>
    <string name="publicQuestion">Que cherchez vous ?</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loginTitle">Zone réservée aux athlètes.</string>
    <string name="mainTextBuvettes">Voir le taux d\'occupation des différentes buvettes</string>
    <string name="mainTextPalce">Voir où sont les places libres dans le stade</string>
</resources>
