<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.gecko.smartstadium.activities.PublicActivity">

    <LinearLayout
        android:id="@+id/publicLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/publicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/publicTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/publicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/publicName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/publicLocalistionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/publicLayoutTitle"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/publicLocalisationTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/publicLocalistionInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/publicLocalistionTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/publicLocalistionInfo"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/publicStuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/publicLocalistionInfo"
        android:layout_marginTop="50dp"
        android:text="@string/publicTmp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/publicQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/publicStuff"
        android:gravity="center_horizontal"
        android:text="@string/publicQuestion"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/publicLinearButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/publicQuestion"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/publicPlaceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Places libre" />

        <Button
            android:id="@+id/publicBuvetteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Buvette" />

    </LinearLayout>


</RelativeLayout>
